[gd_scene load_steps=4 format=3 uid="uid://d1dnbm6mq2pwc"]

[ext_resource type="FontFile" path="res://Assets/DynamicFonts/MineTTF_TITLE_whtie.tres" id="1"]
[ext_resource type="FontFile" path="res://Assets/DynamicFonts/MinecraftTF_MM_Buttons.tres" id="2"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 135.0
script = ExtResource("3")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 32.0

[node name="RunningHallsLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1")
text = "Running Halls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 40.0
offset_right = 184.0
offset_bottom = 120.0

[node name="StartButton" type="Button" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2")
text = "START"

[node name="OptionButton" type="Button" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2")
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2")
text = "CREDITS"

[connection signal="pressed" from="VBoxContainer3/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer3/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer3/CreditsButton" to="." method="_on_CreditsButton_pressed"]
